--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "rms-cli",
-  "version": "1.0.4",
+  "name": "rsm-cli",
+  "version": "1.0.3",
   "description": "NPM registry manager for quick and easy switching of mirror sources between different npm registries",
   "main": "./src/index.js",
   "type": "module",
   "bin": {
-    "rms": "./bin/index.js"
+    "rs": "./bin/index.js"
   },
   "keywords": [
     "registry",
