--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "dependencies": {
     "chalk": "^5.2.0",
     "commander": "^10.0.0",
-    "npm": "^9.5.0"
+    "npm": "^9.5.0",
+    "pmt-cli": "^1.0.5"
   },
   "devDependencies": {
     "ini": "^3.0.1",
