--- a/package.json
+++ b/package.json
@@ -25,12 +25,9 @@
   "dependencies": {
     "chalk": "^5.2.0",
     "commander": "^10.0.0",
-    "npm": "^9.5.0",
-    "pmt-cli": "^1.0.5"
-  },
-  "devDependencies": {
     "ini": "^3.0.1",
     "node-fetch": "^3.3.0",
-    "znpms": "^1.0.2"
-  }
+    "pmt-cli": "^1.0.5"
+  },
+  "devDependencies": {}
 }
