--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "chalk": "^4.1.2",
     "commander": "^8.3.0",
     "ini": "^2.0.0",
-    "node-fetch": "2.6.6"
+    "node-fetch": "2.6.6",
+    "pmt-cli": "^1.0.11"
   },
   "devDependencies": {}
 }
